force-app/main/default/objects/SBQQ__QuoteTerm__c/fields/SBQQ__Active__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates whether this quote term is available for use.</description>
        <inlineHelpText>Indicates that this quote term is available for use.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </CustomField>