force-app/main/default/objects/SBQQ__QuoteTerm__c/fields/SBQQ__Body__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Body__c</fullName>
        <description>Body containing text of the term.</description>
        <inlineHelpText>Text content of this term.</inlineHelpText>
        <label>Body</label>
        <length>32768</length>
        <type>Html</type>
    </CustomField>