force-app/main/default/objects/SBQQ__QuoteTerm__c/fields/SBQQ__Locked__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls a Quote Term being editable by a user.</description>
        <inlineHelpText>Controls a Quote Term being editable by a user.</inlineHelpText>
        <label>Locked</label>
        <type>Checkbox</type>
    </CustomField>