force-app/main/default/objects/SBQQ__QuoteTerm__c/fields/SBQQ__ParentTerm__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ParentTerm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent term for this term.</description>
        <inlineHelpText>Parent term for this term.</inlineHelpText>
        <label>Parent Term</label>
        <referenceTo>SBQQ__QuoteTerm__c</referenceTo>
        <relationshipLabel>Sub Terms</relationshipLabel>
        <relationshipName>SubTerms</relationshipName>
        <type>Lookup</type>
    </CustomField>