force-app/main/default/objects/SBQQ__QuoteTerm__c/fields/SBQQ__PrintOrder__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PrintOrder__c</fullName>
        <description>Order in which the terms are printed on quote document.</description>
        <inlineHelpText>Specifies the order in which the terms are printed on quote document.</inlineHelpText>
        <label>Print Order</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>