force-app/main/default/objects/SBQQ__QuoteTerm__c/fields/SBQQ__Quote__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote to which this term applies.</description>
        <inlineHelpText>Quote to which this term applies. Left blank if this is a standard term.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Quote Terms</relationshipLabel>
        <relationshipName>QuoteTerms</relationshipName>
        <type>Lookup</type>
    </CustomField>