force-app/main/default/objects/SBQQ__QuoteTerm__c/fields/SBQQ__StandardTerm__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__StandardTerm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies the standard term that is being modified.</description>
        <inlineHelpText>Specifies the standard term that is being modified.</inlineHelpText>
        <label>Standard Term</label>
        <referenceTo>SBQQ__QuoteTerm__c</referenceTo>
        <relationshipLabel>Modified Terms</relationshipLabel>
        <relationshipName>ModifiedTerms</relationshipName>
        <type>Lookup</type>
    </CustomField>