force-app/main/default/objects/SBQQ__QuoteTerm__c/fields/SBQQ__TemplateContent__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TemplateContent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Template Content to which this term is applied.</description>
        <inlineHelpText>Template Content to which this term is applied.</inlineHelpText>
        <label>Template Content</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SBQQ__TemplateContent__c.SBQQ__Type__c</field>
                <operation>equals</operation>
                <value>Quote Terms</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__TemplateContent__c</referenceTo>
        <relationshipLabel>Quote Terms</relationshipLabel>
        <relationshipName>Quote_Terms</relationshipName>
        <type>Lookup</type>
    </CustomField>