force-app/main/default/objects/SBQQ__QuoteTerm__c/fields/SBQQ__Type__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Type__c</fullName>
        <description>Indicates if the term is standard, custom, or modified.</description>
        <formula>IF(AND(ISBLANK(SBQQ__Quote__c),ISBLANK(SBQQ__StandardTerm__c)), $Label.sbqq__lbl_standard,
  IF(AND(NOT(ISBLANK(SBQQ__Quote__c)),ISBLANK(SBQQ__StandardTerm__c)), $Label.sbqq__lbl_custom, $Label.sbqq__lbl_modified))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates if the term is standard, custom, or modified.</inlineHelpText>
        <label>Type</label>
        <type>Text</type>
    </CustomField>