force-app/main/default/objects/SBQQ__QuoteTerm__c/listViews/SBQQ__All.listView-meta.xml
<ListView>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__PrintOrder__c</columns>
        <columns>SBQQ__Active__c</columns>
        <columns>SBQQ__Status__c</columns>
        <columns>SBQQ__Type__c</columns>
        <columns>SBQQ__Body__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>